--- a/client/EB_media/package.json
+++ b/client/EB_media/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
+    "@mantine/core": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
