--- a/client/EB_media/package.json
+++ b/client/EB_media/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-project",
   "private": true,
+  "proxy":"http://localhost:5000",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,6 +12,7 @@
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
     "@mantine/core": "^5.1.0",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
